# agent-eval-lab

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-04-27-comparison-runner.md
examples/comparisons/: basic_compare.json
examples/configs/: baseline.md
examples/datasets/: basic_tasks.json
examples/prompts/: basic_prompts.json
src/agent_eval_lab/: __init__.py  cli.py  comparison.py  dataset_io.py  models.py  prompt_registry.py  providers.py  report_io.py  runner.py  scoring.py  validators.py
tests/: test_cli.py  test_comparison.py  test_dataset_io.py  test_prompt_registry.py  test_providers.py  test_report_io.py  test_runner.py  test_validators.py
