[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval-lab"
version = "0.1.0"
description = "Local-first starter repo for building agent and LLM evaluation harnesses"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
agent-eval-lab = "agent_eval_lab.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
